[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
derive_builder = "0.12.0"
prost = "0.11.5"
prost-types = "0.11.5"
regex = "1.7.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.16"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.38"
tonic = { version = "0.8.3", features = ["gzip"]}
tracing = "0.1.37"

[build-dependencies]
proto-builder-trait = "0.5.0"
tonic-build = "0.8.4"
