[package]
name = "reserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.68"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }
tokio = { version = "1.28.0", features = ["sync"] }
